	  bit.  I don't see the busy bit changing on the SAM3U-EK board.  But
	  maybe it is not supposed to.  From my reading of the ADS7843 spec, it
	  would not be appropriate to wait for the BUSY bit to de-asserted
	  anyway (since it is only de-asserted when we read the data)
	  (2013-6-16).
	* configs/sam3u-ek/src/up_touchscreen.c: Fix polarity of the /PENIRQ
	  signal (it is active low) (2013-6-16).
	* configs/sam3u-ek/include/board.h:  The SAM3U-EK board now runs at
	  96MHz.  This might have broken some things? (2013-6-17).
	* drivers/mmcsd/mmcsd-spi.c:  Driver need to make sure that the SPI mode
	  and data width are correct (2013-6-17).
	* arch/arm/src/kinetis/kinetis_tsi.h:  Corrections to the Kinetis
	  (2013-6-18)
	* arch/arm/src/sam34/sam_spi.c:  Fix SPI mode setting.  In the SAM3/4
	  family, the clock phase control (CPHA) is inverted (NPHA) (2013-6-18).
	* arch/arm/src/kl/chip/kl_tsi.h: Freescale KL25Z TSI register
	  definitions from Alan Carvalho de Assis (2013-6-18).
	* configs/freedom-kl25z/src/kl_tsi.c:  Example TSI driver for the
	  Freedom KL25Z board from Alan Carvalho de Assis (2013-6-18).
	* arch/arm/src/sam34/sam_spi.c:  Correct an incorrect pointer test.
	  Was checking if the wrong pointer was NULL (2013-6-18).
	* arch/arm/src/kl/kl_spi.c and chip/kl_spi.h:  Add SPI driver and
	  register definitions for the Freescale KL25Z (2013-6-19).
	* arm/src/sam34/chip/sam4l_lcdca.h:  Register definition file for
	  the SAM4L LCD peripheral (2013-6-19).
	* arm/src/sam34/chip/sam_spi.h:  SPI register definition file updated
	  to include a few differences for the SAM4L (2013-6-19)
	* arm/src/sam34/chip/sam4l_pdca.h: Add SAM4L PDCA register definition
	  file; also renamed sam_dmac.* files to sam3u_dmac.* to identify
	  them as SAM4U/4S only files (2013-6-19).
	* configs/freedom-lk25z/src/kl_spi.c:  Add the framework for
	  controlling SPI-related discrete inputs and outputs.  Taken from
	  work by Alan Carvalho de Assis (2013-6-20).